# ncmpcpp

./: .gitignore  CMakeLists.txt  build.sh
src/: CMakeLists.txt  mpdpp.h  ncmpcpp.cpp
src/curses/: window.h
src/screens/: lyrics.cpp  lyrics.h
